testsuite/tests/typecheck/should_fail/tcfail094.hs


module ShouldFail where

-- This nonsense tickled a missing-kind-check error in ghc5.00.2

type A = Int 1



