testsuite/tests/typecheck/should_fail/tcfail094.stderr

tcfail094.hs:7:14: error: [GHC-68567]
    Illegal type: ‘1’
    Suggested fix:
      Perhaps you intended to use DataKinds (implied by TypeInType and UnliftedDatatypes)
